# ROS-UART-COMMUNICATION

mcu_uart/: README.md
mcu_uart/Communication/: communication_handle.c  communication_handle.h
mcu_uart/SYSTEM/usart/: usart.c  usart.h
mcu_uart/USER/: USART.map  USART.uvguix.10245  USART.uvopt  USART.uvoptx  USART.uvprojx  main.c  myclass.h  startup_stm32f10x_hd.lst  startup_stm32f10x_md.lst
msg2uart/: CMakeLists.txt  README.md  package.xml
msg2uart/include/ros_uart_communication/: SerialNode.h  SerialPort.h
msg2uart/msg/: cmd.msg  feedback.msg
msg2uart/script/: test.py
msg2uart/src/: SerialNode.cpp  SerialPort.cpp  main.cpp
pub_msg/: CMakeLists.txt  README.md  package.xml
pub_msg/src/: main.cpp
